refactor: isola logica de dashboard na API, ajusta swagger e implementa lixeira
